# my-ai-server

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yaml
.claude/: settings.json
backend/: .env.example  AGENTS.md  CLAUDE.md  Makefile  pyproject.toml
backend/docker/: Dockerfile  Dockerfile.local
backend/src/app/core/: settings.py
backend/src/app/health/: service.py
backend/tests/: test_health.py
docs/: agentic.md  infra.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  abyss.ts  index.css  useReveal.ts
frontend/src/components/: DepthLine.tsx  DepthRail.tsx  Features.tsx  Floor.tsx  Footer.tsx  Hero.tsx  Nav.tsx  SvgDefs.tsx
secrets/: README.md
skills/commit/: SKILL.md
skills/create-pr/: SKILL.md
specs/2026-06-27-abyssey-landing/: 01_README.md  02_plan.md  03_progress.md  04_notes.md  notes.md  plan.md  progress.md
specs/2026-07-12-be-cloud-run-deploy/: 01_README.md  02_plan.md  03_progress.md  04_notes.md
specs/_template/: 01_README.md  03_progress.md  04_notes.md  notes.md  plan.md  progress.md
src/app/: main_api.py
src/app/api/health/: health_api.py  health_router.py
src/app/core/: logger.py
src/app/health/: router.py  schemas.py
tasks/2026-06-27-abyssey-landing/: abyssey-hero.mockup.html  progress.md
